Add footer element contents to index.html (summary of BTD6); added horizontal line between 1st and 2nd headings at top

--- a/index.html
+++ b/index.html
@@ -55,11 +55,31 @@
 
     <main>
         <h1>Welcome to the BTD6 Cheat Sheet!</h1>
-        
+        <form>
+            <div>
+                <span>@</span>
+                <input type ="text" placeholder="name@emailname.com"/>
+            </div>
+            <div>
+                <span>Password</span>
+                <input type="password" placeholder="password"/>
+            </div>
+            <button type="submit">Login</button>
+            <button type="submit">Sign Up</button>
+        </form>
     </main>
 
     <footer>
-        
+        <hr />
+        <h1>About BTD6</h1>
+        <p>
+            BTD6 is a strategy-oriented tower defense game in which you must make use of the 25 Monkey towers to pop waves of Bloons 
+            that will follow a set path along a track on screen. Bloons come in various "flavors" that will make them immune to the
+            attacks of some towers but vulnerable to others. In addition, each of your towers will have 15 unique upgrades to select
+            from to improve your chances of winning. This interactable cheat sheet will help you learn the more detailed stats of 
+            each tower that the game doesn't always tell you.
+        </p>
+        <span>Created by Parker Remund</span>
     </footer>
 </body>
 </html>
