test commit: changed BTD6 in footer to Bloons Tower Defense 6

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <header>
         <h1>BTD6 Cheat Sheet</h1>
+        
+        <hr />
 
         <h2>Select a Tower:</h2>
         <nav>
@@ -77,7 +79,7 @@
             that will follow a set path along a track on screen. Bloons come in various "flavors" that will make them immune to the
             attacks of some towers but vulnerable to others. In addition, each of your towers will have 15 unique upgrades to select
             from to improve your chances of winning. This interactable cheat sheet will help you learn the more detailed stats of 
-            each tower that the game doesn't always tell you.
+            each tower and their upgrades, particularly the ones the game hides from you. Good luck!
         </p>
         <span>Created by Parker Remund</span>
     </footer>
