Add html file for Dart Monkey Stats. Make Dart Monkey in nav menu a link to said html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <h3>Primary Monkeys</h3>
             <menu>
-                <li>Dart Monkey</li>
+                <li><a href="dart.html">Dart Monkey</a></li>
                 <li>Boomerang Monkey</li>
                 <li>Bomb Shooter</li>
                 <li>Tack Shooter</li>
@@ -75,7 +75,7 @@
         <hr />
         <h1>About BTD6</h1>
         <p>
-            BTD6 is a strategy-oriented tower defense game in which you must make use of the 25 Monkey towers to pop waves of Bloons 
+            Bloons Tower Defense 6 is a strategy-oriented tower defense game in which you must make use of the 25 Monkey towers to pop waves of Bloons 
             that will follow a set path along a track on screen. Bloons come in various "flavors" that will make them immune to the
             attacks of some towers but vulnerable to others. In addition, each of your towers will have 15 unique upgrades to select
             from to improve your chances of winning. This interactable cheat sheet will help you learn the more detailed stats of 
