Add hyperlinks to all tower html files from index.html; updated tower upgrades/base stats for Dart/Boomerang monkey sites

--- a/boomerang.html
+++ b/boomerang.html
@@ -14,7 +14,7 @@
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$315</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,19 +22,19 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.2s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (43 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Circling Boomerang Attacks</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Improved Rangs</th>
+                    <th>Glaives</th>
+                    <th>Glaive Ricochet</th>
+                    <th>MOAR Glaives</th>
+                    <th>Glaive Lord</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
+                    <td>280</td>
+                    <td>600</td>
                     <td>2,000</td>
-                    <td>20,000</td>
+                    <td>32,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Throwing</th>
+                    <th>Faster Rangs</th>
+                    <th>Bionic Boomerang</th>
+                    <th>Turbo Charge</th>
+                    <th>Perma Charge</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>175</td>
+                    <td>250</td>
+                    <td>1,250</td>
+                    <td>4,200</td>
+                    <td>35,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Range Rangs</th>
+                    <th>Red Hot Rangs</th>
+                    <th>Kylie Boomerang</th>
+                    <th>MOAB Press</th>
+                    <th>MOAB Domination</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
                     <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>1,300</td>
+                    <td>2,400</td>
+                    <td>50,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
