--- a/dart.html
+++ b/dart.html
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Sharp Shots</th>
+                    <th>Razor Sharp Shots</th>
+                    <th>Spike-o-pult</th>
+                    <th>Juggernaut</th>
+                    <th>Ultra-Juggernaut</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$140</td>
+                    <td>$200</td>
+                    <td>$320</td>
+                    <td>$1,800</td>
+                    <td>$15,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Quick Shots</th>
+                    <th>Very Quick Shots</th>
+                    <th>Triple Shot</th>
+                    <th>Super Monkey Fan Club</th>
+                    <th>Plasma Monkey Fan Club</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$100</td>
+                    <td>$190</td>
+                    <td>$450</td>
+                    <td>$7,200</td>
+                    <td>$45,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Range Darts</th>
+                    <th>Enhanced Eyesight</th>
+                    <th>Crossbow</th>
+                    <th>Sharpshooter</th>
+                    <th>Crossbow Master</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$90</td>
+                    <td>$200</td>
+                    <td>$575</td>
+                    <td>$2,050</td>
+                    <td>$21,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
