--- a/index.html
+++ b/index.html
@@ -16,39 +16,39 @@
             <h3>Primary Monkeys</h3>
             <menu>
                 <li><a href="dart.html">Dart Monkey</a></li>
-                <li>Boomerang Monkey</li>
-                <li>Bomb Shooter</li>
-                <li>Tack Shooter</li>
-                <li>Ice Monkey</li>
-                <li>Glue Gunner</li>
-                <li>Desperado</li>
+                <li><a href="boomerang.html">Boomerang Monkey</a></li>
+                <li><a href="bomb.html">Bomb Shooter</a></li>
+                <li><a href="tack.html">Tack Shooter</a></li>
+                <li><a href="ice.html">Ice Monkey</a></li>
+                <li><a href="glue.html">Glue Gunner</a></li>
+                <li><a href="desperado.html">Desperado</a></li>
             </menu>
             <h3>Military Monkeys</h3>
             <menu>
-                <li>Sniper Monkey</li>
-                <li>Monkey Sub</li>
-                <li>Monkey Buccaneer</li>
-                <li>Monkey Ace</li>
-                <li>Heli Pilot</li>
-                <li>Mortar Monkey</li>
-                <li>Dartling Gunner</li>
+                <li><a href="sniper.html">Sniper Monkey</a></li>
+                <li><a href="sub.html">Monkey Sub</a></li>
+                <li><a href="buccaneer.html">Monkey Buccaneer</a></li>
+                <li><a href="ace.html">Monkey Ace</a></li>
+                <li><a href="heli.html">Heli Pilot</a></li>
+                <li><a href="mortar.html">Mortar Monkey</a></li>
+                <li><a href="dartling.html">Dartling Gunner</a></li>
             </menu>
             <h3>Magic Monkeys</h3>
             <menu>
-                <li>Wizard Monkey</li>
-                <li>Super Monkey</li>
-                <li>Ninja Monkey</li>
-                <li>Alchemist</li>
-                <li>Druid</li>
-                <li>Mermonkey</li>
+                <li><a href="wizard.html">Wizard Monkey</a></li>
+                <li><a href="super.html">Super Monkey</a></li>
+                <li><a href="ninja.html">Ninja Monkey</a></li>
+                <li><a href="alchemist.html">Alchemist</a></li>
+                <li><a href="druid.html">Druid</a></li>
+                <li><a href="mermonkey.html">Mermonkey</a></li>
             </menu>
             <h3>Support Monkeys</h3>
             <menu>
-                <li>Banana Farm</li>
-                <li>Spike Factory</li>
-                <li>Monkey Village</li>
-                <li>Engineer Monkey</li>
-                <li>Beast Handler</li>
+                <li><a href="banana.html">Banana Farm</a></li>
+                <li><a href="spikefactory.html">Spike Factory</a></li>
+                <li><a href="village.html">Monkey Village</a></li>
+                <li><a href="engineer.html">Engineer Monkey</a></li>
+                <li><a href="beasthandler.html">Beast Handler</a></li>
             </menu>
         </nav>
 
