Add table contents for Bomb/Tack Shooter HTML files

--- a/bomb.html
+++ b/bomb.html
@@ -3,50 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Bomb Shooter Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Bomb Shooter (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$375</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
                     <td>1</td>
                 </tr>
                 <tr>
-                    <th>Pierce</th>
-                    <td>2</td>
+                    <th>Bomb pierce</th>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <th>Explosion pierce</th>
+                    <td>22</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.5s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (40 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, White, Lead</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Camo, Black</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Explosive attacks</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +63,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Bigger Bombs</th>
+                    <th>Heavy Bombs</th>
+                    <th>Really Big Bombs</th>
+                    <th>Bloon Impact</th>
+                    <th>Bloon Crush</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>650</td>
+                    <td>1,100</td>
+                    <td>2,800</td>
+                    <td>55,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +96,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Reload</th>
+                    <th>Missile Launcher</th>
+                    <th>MOAB Mauler</th>
+                    <th>MOAB Assassin</th>
+                    <th>MOAB Eliminator</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>400</td>
+                    <td>1,000</td>
+                    <td>3,450</td>
+                    <td>28,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +129,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Extra Range</th>
+                    <th>Frag Bombs</th>
+                    <th>Cluster Bombs</th>
+                    <th>Recursive Cluster</th>
+                    <th>Bomb Blitz</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>700</td>
+                    <td>2,700</td>
+                    <td>23,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
