--- a/tack.html
+++ b/tack.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Tack Shooter Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Tack Shooter (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$260</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,15 +22,15 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>1</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.12s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Very Small (23 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Fires 8 tacks at once over 360 degree area</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Shooting</th>
+                    <th>Even Faster Shooting</th>
+                    <th>Hot Shots</th>
+                    <th>Ring of Fire</th>
+                    <th>Inferno Ring</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>150</td>
+                    <td>300</td>
+                    <td>650</td>
+                    <td>3,500</td>
+                    <td>45,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Range Tacks</th>
+                    <th>Super Range Tacks</th>
+                    <th>Blade Shooter</th>
+                    <th>Blade Maelstrom</th>
+                    <th>Super Maelstrom</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
                     <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>225</td>
+                    <td>550</td>
+                    <td>2,700</td>
+                    <td>15,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,20 +125,20 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>More Tacks</th>
+                    <th>Even More Tacks</th>
+                    <th>Tack Sprayer</th>
+                    <th>Overdrive</th>
+                    <th>The Tack Zone</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
+                    <td>110</td>
+                    <td>110</td>
+                    <td>450</td>
+                    <td>3,200</td>
                     <td>20,000</td>
                 </tr>
                 <tr>
