Add table contents for Ice/Glue/Desperado HTML files

--- a/desperado.html
+++ b/desperado.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Desperado Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Desperado (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$300</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
+                    <td>2x1</td>
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>1</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.2s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Large (60 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>2-shot burst attacks</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Quickdraw</th>
+                    <th>Standoff</th>
+                    <th>Big Iron</th>
+                    <th>Twin Sixes</th>
+                    <th>The Blazing Sun</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>200</td>
+                    <td>1,200</td>
+                    <td>4,800</td>
+                    <td>17,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Eagle Eye</th>
+                    <th>Bullseye</th>
+                    <th>Deadeye</th>
+                    <th>Bounty Hunter</th>
+                    <th>Golden Justice</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>150</td>
+                    <td>350</td>
+                    <td>3,000</td>
+                    <td>6,500</td>
+                    <td>42,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Wanderer</th>
+                    <th>Nomad</th>
+                    <th>Enforcer</th>
+                    <th>Avenger</th>
+                    <th>The Desert Phantom</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>220</td>
+                    <td>280</td>
+                    <td>2,100</td>
+                    <td>9,500</td>
+                    <td>31,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
