--- a/glue.html
+++ b/glue.html
@@ -3,50 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Glue Gunner Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Glue Gunner (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$225</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>1</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1s</td>
+                </tr>
+                <tr>
+                    <th>Bloon layers glued/glob</th>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th>Glue duration</th>
+                    <td>11s</td>
+                </tr>
+                <tr>
+                    <th>Glue slow intensity</th>
+                    <td>-50% Bloon speed</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (46 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
                     <td>Small</td>
                 </tr>
                 <tr>
-                    <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <th>Can Glue</th>
+                    <td>Purple, White, Black, Lead</td>
                 </tr>
                 <tr>
-                    <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <th>Cannot Glue</th>
+                    <td>Camo, MOAB</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Slows Bloons with globs of glue</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +71,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Glue Soak</th>
+                    <th>Corrosive Glue</th>
+                    <th>Bloon Dissolver</th>
+                    <th>Bloon Liquefier</th>
+                    <th>Bloon Solver</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
+                    <td>300</td>
                     <td>2,000</td>
-                    <td>20,000</td>
+                    <td>5,000</td>
+                    <td>22,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +104,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Bigger Globs</th>
+                    <th>Glue Splatter</th>
+                    <th>Glue Hose</th>
+                    <th>Glue Strike</th>
+                    <th>Glue Storm</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
                     <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>970</td>
+                    <td>1,950</td>
+                    <td>4,000</td>
+                    <td>16,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +137,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Stickier Glue</th>
+                    <th>Stronger Glue</th>
+                    <th>MOAB Glue</th>
+                    <th>Relentless Glue</th>
+                    <th>Super Glue</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>280</td>
+                    <td>400</td>
+                    <td>3,600</td>
+                    <td>4,000</td>
+                    <td>24,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
