--- a/ice.html
+++ b/ice.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Ice Monkey Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Ice Monkey (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$400</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,15 +22,23 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>40</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>2.4s</td>
+                </tr>
+                <tr>
+                    <th>Freeze duration</th>
+                    <td>1.5s</td>
+                </tr>
+                <tr>
+                    <th>Bloon layers freezed/attack</th>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Very Small (20 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
@@ -38,15 +46,15 @@
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, Black</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Camo, Lead, White, MOAB</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Freeze attacks, amphibious, -50% Ceramic Bloon freeze duration</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +67,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Permafrost</th>
+                    <th>Cold Snap</th>
+                    <th>Ice Shards</th>
+                    <th>Embrittlement</th>
+                    <th>Super Brittle</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>150</td>
+                    <td>350</td>
+                    <td>1,500</td>
+                    <td>2,300</td>
+                    <td>28,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +100,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Enhanced Freeze</th>
+                    <th>Deep Freeze</th>
+                    <th>Arctic Wind</th>
+                    <th>Snowstorm</th>
+                    <th>Absolute Zero</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>2,750</td>
+                    <td>4,000</td>
+                    <td>16,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +133,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Larger Radius</th>
+                    <th>Re-Freeze</th>
+                    <th>Cryo Cannon</th>
+                    <th>Icicles</th>
+                    <th>Icicle Impale</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
+                    <td>150</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>1,900</td>
+                    <td>2,750</td>
+                    <td>30,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
